--- a/ TicTacToe.ipynb
+++ b/ TicTacToe.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "74d88ad3-495a-440d-8f0a-71da62c5934e",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "45aeee7b-8a44-48a5-9ff2-b23fa027024e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b2f35219-c328-49d3-ba43-55319f2690bf",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "[' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "16590b71-d9af-48ed-ae4b-1ba3c9086967",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "id": "020213f9-48f2-4220-be45-a7a5b2b92272",
    "metadata": {},
    "outputs": [
@@ -74,11 +74,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X  |  X  |  O\n",
+      "   |     |  X\n",
       "--------------\n",
-      "O  |  O  |  X\n",
+      "   |  X  |   \n",
       "--------------\n",
-      "X  |  O  |  O\n"
+      "O  |  O  |  O\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e58bd90d-a56b-4243-89c3-fce407f0f34a",
    "metadata": {},
    "outputs": [],
@@ -98,16 +98,6 @@
     "        return True\n",
     "    else:\n",
     "        return  False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "d656f8d8-a5ac-4a35-b5c4-a12a262feb23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "li[5] = \"o\""
    ]
   },
   {
@@ -155,6 +145,16 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "d656f8d8-a5ac-4a35-b5c4-a12a262feb23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "li[5] = \"o\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "0079e9ac-f871-49d0-9436-e412dfbc3090",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9021a526-e9aa-4a07-a4d9-a735522bae9f",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "cddc32d1-f05f-4318-8640-d97da6cab873",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "47311489-6125-4148-b6ca-34be3f8bc9de",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "07a88d3a-b179-4cad-bc9b-2b7416b6a87a",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "None rr\n"
+      "None gsd\n"
      ]
     },
     {
@@ -217,7 +217,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "None 7\n"
+      "None 4\n"
      ]
     }
    ],
@@ -301,6 +301,34 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
+      "please choose among[1, 2, 4, 6, 8, 9] hds\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please provide a number[1, 2, 4, 6, 8, 9]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "please choose among[1, 2, 4, 6, 8, 9] 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please provide a number among [1, 2, 4, 6, 8, 9]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
       "please choose among[1, 2, 4, 6, 8, 9] 9\n"
      ]
     },
@@ -343,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "53d8ed4a-86c7-4525-8bd0-26da57fa0b88",
    "metadata": {},
    "outputs": [
@@ -353,7 +381,7 @@
        "False"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,17 +407,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "fbe730c3-4504-46dd-8e96-ec3b22f70831",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,17 +463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "id": "82934139-1679-41d8-9efe-7acd1ccafa31",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "id": "74501882-2a7c-4a35-a8d3-abffea86a665",
    "metadata": {},
    "outputs": [
@@ -464,12 +492,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X  |  O  |  O\n",
+      "   |     |  X\n",
       "--------------\n",
-      "O  |  O  |  X\n",
+      "   |  X  |   \n",
       "--------------\n",
-      "X  |  X  |  O\n",
-      "board full, game draw, do you want to play again\n"
+      "O  |  O  |  O\n",
+      "congratulations O won the game\n"
      ]
     }
    ],
@@ -497,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "id": "a9882855-3cc8-44f9-bccc-abfa5938b06a",
    "metadata": {},
    "outputs": [
@@ -505,11 +533,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X  |  X  |  O\n",
+      "X  |  O  |  O\n",
       "--------------\n",
       "O  |  O  |  X\n",
       "--------------\n",
-      "X  |  O  |  O\n",
+      "X  |  X  |  O\n",
       "board full, game draw, do you want to play again\n"
      ]
     },
@@ -517,7 +545,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "do you want to play again, yes, no? no\n"
+      "do you want to play again, yes, no? n\n"
      ]
     }
    ],
