--- a/18 Class .ipynb
+++ b/18 Class .ipynb
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "id": "f343554c-3862-4af1-a271-47358f626fd7",
    "metadata": {},
    "outputs": [],
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "id": "747caf23-6585-4deb-b368-28316fb19dda",
    "metadata": {},
    "outputs": [
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "id": "7fd4ecbf-1acd-4721-90fb-e6bcb8464991",
    "metadata": {},
    "outputs": [
@@ -1428,19 +1428,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "id": "90954651-6c76-47f3-b636-1be0b804d21a",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "           ========= SBI =========\n",
+      "           Account Holder : harjeet\n",
+      "           Account Balance: 8000\n",
+      "           \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pehlaAccount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "10fe0c93-5687-476a-9762-2f5ca0515f9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000 was debited\n",
+      "current balance 6000\n",
+      "initial amount 8000\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<__main__.Account at 0x25614422660>"
+       "2000"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pehlaAccount.debit(2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "e3cfa68f-c114-4ce7-8a3e-9cf716295ff1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "           ========= SBI =========\n",
+      "           Account Holder : harjeet\n",
+      "           Account Balance: 8000\n",
+      "           \n"
+     ]
     }
    ],
    "source": [
@@ -1450,10 +1503,704 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10fe0c93-5687-476a-9762-2f5ca0515f9b",
+   "id": "3c351d5a-a8de-49a9-a08d-e5e0f7da860c",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05c280cd-2ada-4b37-a550-9cb2bcea9be2",
+   "metadata": {},
+   "source": [
+    "# Polymorphism"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "53aa3ec0-660e-4598-a783-b8a3c302e2a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5176db3a-afff-4711-85a6-9a4f62fbe049",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3678f822-a09b-4770-b44c-a309f6b62540",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.randint(5, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "1ff1617a-dbef-494a-a3f7-c8b086a10072",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 2, 1, 4, 3, 2, 4, 3, 1, 4], dtype=int32)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numpy.random.randint(1, 5, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ef0edff7-fe5e-4266-8ed7-80212e4e40be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car():\n",
+    "    Tyre = 4\n",
+    "\n",
+    "    def __init__(self, company):\n",
+    "        self.comapny= company\n",
+    "        print(\"car was made\")\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        print(\"car was scraped\")\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        print(\"this is a cng car\")\n",
+    "\n",
+    "    def intro(self):\n",
+    "        print(\"this is a car\")\n",
+    "\n",
+    "    def move(self):\n",
+    "        print(\"moving forward\")\n",
+    "\n",
+    "    def fuel(self):\n",
+    "        print(\"fuel up\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "4e0435bc-1525-4d1f-9049-3ff0f5d8b023",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CngCar(Car):\n",
+    "    fuel = \"CNG\"\n",
+    "    # function overloading\n",
+    "\n",
+    "    def __init__(self, company, model):\n",
+    "        #super\n",
+    "        super().__init__(company)\n",
+    "        self.model = model\n",
+    "\n",
+    "    def intro(self):\n",
+    "        print(\"this is a car\")\n",
+    "\n",
+    "    def discription(self):\n",
+    "        print(\"this car has best quality\")\n",
+    "        super().fuel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "e16e801d-d2bf-4896-9733-381c979a8683",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "car was made\n"
+     ]
+    }
+   ],
+   "source": [
+    "gadi = CngCar(\"TATA\", \"mahindra\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "014d7e0c-9e4c-4371-9895-9a1fc297d0ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this car has best quality\n",
+      "fuel up\n"
+     ]
+    }
+   ],
+   "source": [
+    "gadi.discription()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "6d5c78d1-70d4-4041-990a-10bced2e6d7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car():\n",
+    "    Tyre = 4\n",
+    "\n",
+    "    def __init__(self, company):\n",
+    "        self.comapny= company\n",
+    "        print(\"car was made\")\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        print(\"car was scraped\")\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        print(\"this is a cng car\")\n",
+    "\n",
+    "    def intro(self):\n",
+    "        print(\"this is a car\")\n",
+    "\n",
+    "    def move(self):\n",
+    "        print(\"moving forward\")\n",
+    "\n",
+    "    def fuel(self):\n",
+    "        print(\"fuel up\")\n",
+    "\n",
+    "    def discription(self):\n",
+    "        print(\"this car has best quality\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "5a0a85de-b9d6-492d-a8c9-261c49b2ae45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CngCar(Car):\n",
+    "    fuel = \"CNG\"\n",
+    "    # function overloading\n",
+    "\n",
+    "    def __init__(self, company, model):\n",
+    "        #super\n",
+    "        super().__init__(company)\n",
+    "        self.model = model\n",
+    "\n",
+    "    def intro(self):\n",
+    "        print(\"this is a car\")\n",
+    "\n",
+    "    def discription(self):\n",
+    "        print(\"this car is great\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "5d635d12-1fb3-4f65-9a4d-39ad1a9a379f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "car was made\n"
+     ]
+    }
+   ],
+   "source": [
+    "gadi = CngCar('thar', 'mahindra')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "dbe1b614-3032-487e-b237-e98874d31f3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this car is great\n"
+     ]
+    }
+   ],
+   "source": [
+    "gadi.discription()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "37c9d722-6e00-49ca-9834-3a209f932b35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'thar'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gadi.comapny"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "4252f42b-0968-4acd-bbc4-c9549fc91014",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gadi.Tyre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "325d8e71-c467-40d6-9015-123337295817",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moving forward\n"
+     ]
+    }
+   ],
+   "source": [
+    "gadi.move()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53780b64-e940-4745-98aa-3426197cc3ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gadi."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "841b00fd-38ac-4e75-9409-167daff81f95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b80dde0-937a-4209-a6f5-8dc0b880cfb8",
+   "metadata": {},
+   "source": [
+    "# Abstraction\n",
+    "## if a child is being created i want to make it mendatory to function overloading on a particular function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "97917b52-a328-49b4-8fdd-c6ec7131bf37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ElectricCar():\n",
+    "    Electric = \"Yes\"\n",
+    "\n",
+    "    def intro(self):\n",
+    "        print(\"this is a car\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8b51e853-de86-49f0-b084-3b1160a07265",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "egadi = ElectricCar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0d520dcb-61c4-48d2-b108-cab4447620d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a car\n"
+     ]
+    }
+   ],
+   "source": [
+    "egadi.intro()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e9c2dab0-299e-48ce-a934-3c05231bb426",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PetrolCar():\n",
+    "    carType = \"Petrol\"\n",
+    "\n",
+    "    def intro(self):\n",
+    "        print(f\"this is a {self.carType}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "2cd86d90-7877-41a6-9bf6-e25d224e48e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pgadi = PetrolCar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "66915a73-48b6-45e0-b8ac-cb3acba31e92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a Petrol\n"
+     ]
+    }
+   ],
+   "source": [
+    "pgadi.intro()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "628c1beb-e322-44cc-bf12-1fe7e6184abd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CngCar():\n",
+    "    carType = \"CNG\"\n",
+    "\n",
+    "    def intro(self):\n",
+    "        print(f\"this is a {self.carType} car\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "d5a70e40-9bc4-4200-a279-72eaf6ad4ddf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cgadi = CngCar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "6f107dcd-a325-4442-987e-07c83f325991",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a CNG car\n"
+     ]
+    }
+   ],
+   "source": [
+    "cgadi.intro()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f01f5b90-d8ea-4183-98e3-6578ae910eab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CNG'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cgadi.carType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "722d4915-02ca-4674-bc79-f1ac4385656c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod, abstractstaticmethod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "c8f7224d-e996-46b7-993e-ad895864a8e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a function that modifies the behaviour of another function (or method or class ). It can change:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "49a0d9ec-5b88-44e2-a15f-2d15e410cf02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car(ABC):\n",
+    "    carType = \"simple\"\n",
+    "\n",
+    "    def hello(self):\n",
+    "        print(\"hello everyone\")\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def intro(self):\n",
+    "        print(f\"this is a {self.carType}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "fd3f86f8-94dc-47f4-8f46-36223ddab71d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DieselCar(Car):\n",
+    "    \n",
+    "    def intro(self):\n",
+    "        print(\"this is a diesel car\")        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "0b44e2d5-0e86-4ff3-901a-5fbc75a9bddb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dgadi= DieselCar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "dc3d1ccb-3d67-43ff-b2f1-2954c82d1f73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a diesel car\n"
+     ]
+    }
+   ],
+   "source": [
+    "dgadi.intro()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "bfb9cf36-bff1-4251-bb5e-a880c6d3a0ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello everyone\n"
+     ]
+    }
+   ],
+   "source": [
+    "dgadi.hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "fa150657-f3cb-445d-9e6d-2677a52b402b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Animal():\n",
+    "    good = \"yes\"\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.name = \"Animal\"\n",
+    "\n",
+    "    def sayHello(self):\n",
+    "        print(\"hello nice to meet you\")\n",
+    "\n",
+    "    #static\n",
+    "    @staticmethod # there is no need to type \"self\" in brackets if we implemented \"staticmethod\" because with it code will be run without error\n",
+    "    def sayHi():\n",
+    "        print(\"hy nice to meet you\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "7d0dcae1-540a-43e9-abe4-dadd6aee6eac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dog = Animal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "989624ad-22cc-47c5-9356-41609665849b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'yes'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dog.good"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "4018b474-fafb-41f6-b456-eec0b08ec031",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Animal'"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dog.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "d41623d3-2457-4857-a9ed-10c375112948",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hy nice to meet you\n"
+     ]
+    }
+   ],
+   "source": [
+    "dog.sayHi()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "3e920b70-d6c4-4c6f-9938-7fc2581a93a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello nice to meet you\n"
+     ]
+    }
+   ],
+   "source": [
+    "dog.sayHello()"
+   ]
   }
  ],
  "metadata": {
